# yt_dlpify

./: Makefile  README.md
domain/: .gitignore  Makefile  README.md  pyproject.toml
domain/domain/entity/error/shared/generic_error/: __init__.py
domain/domain/entity/error/video/youtube/: __init__.py
domain/domain/entity/video/: download_status.py
domain/domain/entity/video/youtube/: __init__.py
external_systems/: Makefile  README.md  pyproject.toml
external_systems/external_systems/cli_app/arg_parse_implementation/: download_youtube_video_from_url.py  download_youtube_video_from_urls_file.py
external_systems/external_systems/utilities/: functions.py
gateways/: Makefile  README.md  pyproject.toml
gateways/gateways/implementations/repository/video_download_tracker/peewee_implementation/: __init__.py
gateways/gateways/implementations/repository/video_download_tracker/peewee_implementation/models/: download_tracking.py
gateways/gateways/implementations/video_downloader/youtube/yt_dlp/: __init__.py
gateways/gateways/implementations/video_metadata_fetcher/youtube/yt_dlp/: __init__.py
gateways/tests/utilities/: constants.py
gateways/tests/video_download_tracking/: test_upsert_video_tracking_usecase_using_peewee_implementation.py
gateways/tests/video_downloading/youtube/: test_download_youtube_video_from_url_usecase_usin_yt_dlp_youtube_downloader_implmenetation.py
gateways/tests/video_downloading/youtube/yt_dlp_implementation/: test_download_youtube_video_from_url_usecase_using_yt_dlp_youtube_downloader_implmenetation.py  test_download_youtube_video_from_urls_file_usecase_using_yt_dlp_youtube_downloader_implmenetation.py
gateways/tests/video_metadata_fetching/youtube/: test_fetch_youtube_video_metadata_from_url_usecase_using_yt_dlp_video_metadata_fetcher_implementation.py
usecases/: Makefile  README.md  pyproject.toml
usecases/tests/output/video_download_tracking/: test_update_download_tracking_usecase.py
usecases/tests/output/video_downloading/: test_download_from_url_usecase.py
usecases/tests/output/video_downloading/youtube/: test_download_from_url_usecase.py  test_download_from_urls_file_usecase.py
usecases/tests/output/video_metadata_fetching/youtube/: test_fetch_youtube_metadata_from_url_usecase.py
usecases/tests/utilities/shared/: functions.py
usecases/tests/utilities/video_download_tracking/: __init__.py
usecases/tests/utilities/video_downloader/youtube/: __init__.py
usecases/tests/utilities/video_metadata_fetcher/youtube/: __init__.py
usecases/usecases/input/entity/error/generic_usecase/: __init__.py
usecases/usecases/input/entity/error/repository/: __init__.py
usecases/usecases/input/interface/repository/downloading_tracker/: __init__.py
usecases/usecases/input/interface/shared/generic_usecase/: __init__.py
usecases/usecases/input/interface/video_downloader/youtube/: __init__.py
usecases/usecases/input/interface/video_metadata_fetcher/youtube/: __init__.py
usecases/usecases/output/video_downloading/youtube/: from_url_usecase.py  from_urls_file_usecase.py
usecases/usecases/output/video_metadata_fetching/youtube/: from_url_usecase.py
usecases/usecases/output/video_persisting/video_download_tracking/: update_video_download_tracking_usecase.py
