[tool.poetry]
name = "domain"
version = "0.1.0"
description = ""
authors = ["ğ•¬ğ–‡ğ–‰ğ–šğ–‘ğ–—ğ–†ğ–ğ–’ğ–†ğ–“ ğ•¸ğ–†ğ–Ÿğ–ğ–†ğ–— <abdulrahmanm.career@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
